# Uriel

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/analysis/: bm25_saturation.py  corpus_walker.py  heaps_law.py  ir_metrics.py  ir_metrics_api.py  plot_style.py  runAnalysis.sh  run_analysis.sh  zipf_law.py
backend/app/: main.py
backend/app/algorithms/: base.py  bm25.py  ranking_factory.py  tfidf.py
backend/app/api/: config.py  deps.py  documents.py  index.py  search.py
backend/app/config/: settings.py
backend/app/core/: resources.py
backend/app/data/: uriel.db
backend/app/index/: indexer.py  inverted_index.py  progress.py
backend/app/models/: document.py  posting.py  search_result.py
backend/app/parser/: content_provider.py  pdf_parser.py  txt_parser.py
backend/app/preprocessing/: base.py  config.py  preprocessing_factory.py  processed_document.py  spacy_engine.py  tokenizer.py  traditional_engine.py
backend/app/query_expansion/: rocchio.py  shinge_index.py  spell_correction.py  wordnet_expansion.py
backend/app/schemas/: config.py  (+4 more)
backend/query_expansion/: rocchio.py
data/documents/: Advances in Early Detection Methods for Cardiovascular Diseases.txt  An improved BM25 algorithm for clinical decision support in Precision Medicine based on co-word analysis and Cuckoo Search.txt  Assessing the agricultural, environmental, and economic effects of crop diversity management.txt  Sustainable Agricultural Practices and Their Effects on Soil Fertility and Crop Yield.txt  The Impact of Active Learning Strategies on Student Achievement in Secondary Education.txt  The Role of Statistical Modeling in Climate Change Projections.txt  coffee's impact in health and well being.txt
frontend/: index.html
frontend/src/: App.css  App.jsx  index.css
resources/docs/: developer.md
(+42 files in other folders)
