[project]
name = "uriel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "en-core-web-sm",
    "fastapi>=0.138.2",
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "numpy>=2.2.6",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.28.0",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
    "rich>=15.0.0",
    "spacy>=3.8.14",
    "uvicorn>=0.49.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/app/tests"]
pythonpath = ["."]          # <-- add this: makes project root importable as `backend...`
markers = [
    "unit: isolated test of a single class/function",
    "integration: multiple real modules composed, no HTTP layer",
    "system: full API black-box test via TestClient",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
